# NamePendingOvito

./: CMakeLists.txt
cmake/: Version.cmake
doc/manual/: Chapter_Credits.docbook  Manual.docbook  html-customization-layer.xsl  wordpress-customization-layer.xsl
doc/manual/licenses/: ovito_pro.docbook
doc/manual/reference/data_inspector/: bonds.docbook  data_inspector.docbook  data_tables.docbook  voxel_grids.docbook
doc/manual/reference/modifiers/particles/: centrosymmetry.docbook  common_neighbor_analysis.docbook  coordination_polyhedra.docbook
doc/manual/reference/scene_objects/: bonds.docbook  data_table.docbook
doc/manual/reference/visual_elements/: bonds.docbook
src/ovito/: CMakeLists.txt
src/ovito/core/app/: Application.cpp
src/ovito/core/dataset/io/: FileSourceImporter.cpp  FileSourceImporter.h
src/ovito/core/rendering/: FrameBuffer.cpp  FrameBuffer.h
src/ovito/core/utilities/io/: FileManager.cpp
src/ovito/core/utilities/mesh/: TriMesh.cpp  TriMesh.h
src/ovito/crystalanalysis/gui/importer/: CAImporterEditor.cpp
src/ovito/crystalanalysis/importer/: DislocImporter.cpp
src/ovito/crystalanalysis/objects/: DislocationVis.cpp  Microstructure.cpp  RenderableDislocationLines.cpp  RenderableDislocationLines.h
src/ovito/grid/gui/: CMakeLists.txt
src/ovito/grid/gui/objects/: VoxelGridInspectionApplet.cpp  VoxelGridInspectionApplet.h
src/ovito/grid/objects/: VoxelGrid.h
src/ovito/gui/desktop/actions/: FileActions.cpp  RenderActions.cpp
src/ovito/gui/desktop/dataset/io/: FileSourceEditor.cpp
src/ovito/gui/desktop/dialogs/: ImportFileDialog.cpp  ImportFileDialog.h  ImportRemoteFileDialog.cpp  ImportRemoteFileDialog.h
src/ovito/gui/desktop/widgets/rendering/: FrameBufferWindow.cpp  FrameBufferWindow.h
src/ovito/opengl/: OpenGLSceneRenderer.cpp  StandardSceneRenderer.cpp
src/ovito/ospray/: CMakeLists.txt
src/ovito/ospray/gui/: OSPRayPathTracerBackendEditor.cpp  OSPRayPathTracerBackendEditor.h  OSPRayRendererEditor.cpp  OSPRayRendererEditor.h  OSPRaySciVisBackendEditor.cpp  OSPRaySciVisBackendEditor.h
src/ovito/ospray/ospray_module/: CMakeLists.txt  CMakeLists.txt.old  moduleInit.cpp
src/ovito/ospray/ospray_module/geometry/: Cones.cpp  Cones.h  Cones.ispc  Cylinders.cpp  Cylinders.h  Cylinders.ispc  Discs.cpp  Discs.h  Discs.ispc  Quadrics.cpp  Quadrics.h  Quadrics.ispc
src/ovito/ospray/renderer/: OSPRayBackend.cpp  OSPRayBackend.h  OSPRayRenderer.cpp  OSPRayRenderer.h
src/ovito/particles/: CMakeLists.txt
src/ovito/particles/export/lammps/: LAMMPSDataExporter.cpp
src/ovito/particles/gui/import/lammps/: LAMMPSBinaryDumpImporterEditor.cpp  LAMMPSTextDumpImporterEditor.cpp
src/ovito/particles/gui/import/xyz/: XYZImporterEditor.cpp
src/ovito/particles/gui/modifier/analysis/centrosymmetry/: CentroSymmetryModifierEditor.cpp  CentroSymmetryModifierEditor.h
src/ovito/particles/gui/modifier/analysis/cna/: CommonNeighborAnalysisModifierEditor.cpp
src/ovito/particles/gui/objects/: ParticleTypeEditor.cpp
src/ovito/particles/import/gsd/: GSDImporter.cpp
src/ovito/particles/modifier/analysis/centrosymmetry/: CentroSymmetryModifier.cpp  CentroSymmetryModifier.h
src/ovito/particles/modifier/analysis/cna/: CommonNeighborAnalysisModifier.cpp  CommonNeighborAnalysisModifier.h
src/ovito/stdobj/gui/properties/: PropertyInspectionApplet.h
src/ovito/stdobj/simcell/: SimulationCellObject.cpp
src/ovito_exe/resources/: Info.plist
tests/files/GSD/: out_proteins.gsd
